# texter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  responses.py  test_levenshtein.py  test_string_diff.py  test_texter.py
texter/: levenshtein.py  string_diff.py  texter.py
