[tool.poetry]
name = "texter"
version = "0.1.0"
description = ""
authors = ["ervin-git"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.30.1"
httpx = "^0.26.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "texter"
]
